components/policies/pod-security-standards/baseline/restrict-container-capabilities/test/cronjob-bad.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
            - name: container01
              image: dummyimagename
              securityContext:
                capabilities:
                  add:
                    - NET_RAW
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob02
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
            - name: container01
              image: dummyimagename
              securityContext:
                capabilities:
                  add:
                    - NET_RAW
                    - SETGID
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob03
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
            - name: container01
              image: dummyimagename
              securityContext:
                capabilities:
                  add:
                    - NET_RAW
            - name: container02
              image: dummyimagename
              securityContext:
                capabilities:
                  add:
                    - SETGID
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob04
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
            - name: initcontainer01
              image: dummyimagename
              securityContext:
                capabilities:
                  add:
                    - NET_RAW
          containers:
            - name: container01
              image: dummyimagename
              securityContext:
                capabilities:
                  add:
                    - SETGID
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob05
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
            - name: initcontainer01
              image: dummyimagename
            - name: initcontainer02
              image: dummyimagename
              securityContext:
                capabilities:
                  add:
                    - NET_RAW
          containers:
            - name: container01
              image: dummyimagename
              securityContext:
                capabilities:
                  add:
                    - SETGID
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob06
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
            - name: initcontainer01
              image: dummyimagename
              securityContext:
                capabilities:
                  add:
                    - NET_RAW
          containers:
            - name: container01
              image: dummyimagename
              securityContext:
                capabilities:
                  add:
                    - SYS_ADMIN
---
