components/policies/pod-security-standards/baseline/restrict-container-capabilities/test/deployment-bad.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - NET_RAW
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - NET_RAW
                - SETGID
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - NET_RAW
        - name: container02
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - SETGID
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment04
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: initcontainer01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - NET_RAW
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - SETGID
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment05
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: initcontainer01
          image: dummyimagename
        - name: initcontainer02
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - NET_RAW
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - SETGID
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment06
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: initcontainer01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - NET_RAW
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - SYS_ADMIN
---
