components/policies/pod-security-standards/baseline/restrict-container-capabilities/test/job-bad.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob01
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - NET_RAW
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob02
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - NET_RAW
                - SETGID
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob03
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - NET_RAW
        - name: container02
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - SETGID
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob04
spec:
  template:
    spec:
      restartPolicy: OnFailure
      initContainers:
        - name: initcontainer01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - NET_RAW
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - SETGID
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob05
spec:
  template:
    spec:
      restartPolicy: OnFailure
      initContainers:
        - name: initcontainer01
          image: dummyimagename
        - name: initcontainer02
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - NET_RAW
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - SETGID
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob06
spec:
  template:
    spec:
      restartPolicy: OnFailure
      initContainers:
        - name: initcontainer01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - NET_RAW
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - SYS_ADMIN
---
