components/policies/pod-security-standards/baseline/restrict-container-capabilities/test/pod-bad.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - NET_RAW
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - NET_RAW
            - SETGID
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - NET_RAW
    - name: container02
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - SETGID
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - NET_RAW
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - SETGID
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod05
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
    - name: initcontainer02
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - NET_RAW
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - SETGID
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod06
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - NET_RAW
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - SYS_ADMIN
---
