components/policies/pod-security-standards/baseline/restrict-container-capabilities/test/pod-good.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - SETGID
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - DAC_OVERRIDE
    - name: container02
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - SETGID
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - DAC_OVERRIDE
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod06
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - DAC_OVERRIDE
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - SETGID
---
